plugins {
	id 'java'
}

group = 'light-compiler'
version = '1.0'

sourceSets.main.java.srcDirs = ["src"]

repositories {
	mavenCentral()
	maven { url 'https://jitpack.io' }
	mavenLocal()
}

jar {
}
tasks.withType(JavaCompile) {
	options.incremental = true
	sourceCompatibility = 8
	targetCompatibility = 8

//		options.compilerArgs += "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
	options.compilerArgs.remove("--enable-preview")
	//	options.compilerArgs.add("-verbose")
}

dependencies {
	compileOnly 'com.google.auto.service:auto-service:1.1.1'
	annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
//	implementation "net.bytebuddy:byte-buddy:1.17.6"
}

test {
	useJUnitPlatform()
}